# dotfiles

./: CLAUDE.md  README.md  aliases  bash_aliases  bashrc  gitconfig  inputrc  profile  rcrc  vimrc  vimrc.bundles  xinputrc  xsessionrc
archive/: README.md
archive/host-yoga/: bashrc.host
archive/repo/: sync.sh
archive/repo/py3/: freeze.txt
archive/themes/Xfce Evolution Crux/: 00.40
archive/themes/Xfce Evolution Devilsclaw/: 00.00
archive/themes/Xfce Evolution Irix/: 00.30
config/autostart/: chromium.desktop  copy.desktop  xfce4-terminal.desktop
config/git/: config  ignore
config/mpd/: mpd.conf
config/mpv/: config
config/nvim/: init.lua  init.vim  plugins.vim
config/rc/init.d/: deluge  gpg-agent  (+2 more)
docs/: git-claudemd-exclude-handoff.md  idea-identity-namespaces.md  manual-verification.md  nsctl-project-plan.md
gnupg/: dirmngr.conf  gpg-agent.conf  gpg.conf
hooks/: post-up
nsctl/: pyproject.toml
nsctl/src/nsctl/: __init__.py  cli.py  config.py  doctor.py  gpg.py  keys.py  models.py  namespace.py  paths.py  switch.py  sync.py
nsctl/src/nsctl/backends/: __init__.py  gpg.py
nsctl/template/: .gitignore  namespace.toml.tmpl
nsctl/template/bashrc.d/: 50-id-IDENTITY.sh.tmpl
nsctl/template/devices/: README.md
nsctl/template/keys/: .gitignore  README.md
nsctl/template/ssh/config.d/: 10-id-IDENTITY.conf.tmpl
nsctl/tests/: conftest.py  test_doctor.py  test_gpg.py  test_integration.py  test_keys.py  test_models.py  test_namespace.py  test_switch.py  test_sync.py
repo/: sync.sh
repo/py2/: Pipfile
repo/py3/: Pipfile
xinput.d/: all_ALL
(+217 files in other folders)
