[project]
name = "nsctl"
version = "0.1.0"
description = "CLI tool for managing isolated identity namespaces"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Ivan Anishchuk" },
]
dependencies = [
    "typer>=0.15,<1",
    "pydantic>=2.10,<3",
    "cryptography>=44,<48",
    "rich>=14,<16",
    "tomli-w>=1.2,<2",
]

[project.scripts]
nsctl = "nsctl.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nsctl"]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"
markers = [
    "slow: marks tests as slow",
    "integration: end-to-end tests requiring GPG",
]

[tool.coverage.run]
source = ["nsctl"]

[tool.coverage.report]
show_missing = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
]
